tests/sksl/errors/OpaqueTypeInArray.dsl.glsl
### Compilation failed:

error: arrays are not yet fully supported
error: expected an identifier, but found '1'
2 errors
